--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,21 @@
-aiohttp==3.8.4
+# requirements.txt
+
+aiohttp==3.9.0
 aiosignal==1.3.1
-async-timeout==4.0.2
-attrs==22.2.0
-certifi==2022.12.7
-charset-normalizer==3.1.0
-click==8.1.3
-colorama==0.4.6
-discord==2.2.2
-discord.py==2.2.2
-docopt==0.6.2
-frozenlist==1.3.3
+attrs==23.1.0
+certifi==2023.11.17
+charset-normalizer==3.3.2
+click==8.1.7
+discord==2.3.2
+discord.py==2.3.2
+frozenlist==1.4.0
 idna==3.4
-jsonschema==4.17.3
+jsonschema==4.20.0
+jsonschema-specifications==2023.11.1
 multidict==6.0.4
 notifiers==1.3.3
-pyrsistent==0.19.3
-python-dotenv==1.0.0
-requests==2.28.2
-urllib3==1.26.15
-yarg==0.1.9
-yarl==1.8.2
+referencing==0.31.0
+requests==2.31.0
+rpds-py==0.13.1
+urllib3==2.1.0
+yarl==1.9.3
